Fix RTL Sidenav on Firefox, not being reseted well

--- a/src/css/rtl.css
+++ b/src/css/rtl.css
@@ -46,6 +46,7 @@ td, th {
 }
 
 .sidenav {
+  left: auto;
   right: -1px;
   border-left: 1px solid #818181;
 }
